--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maths Project SEM 4</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.0/lib/p5.js"></script>
-    <script src="test.js"></script> 
+    <script src="index.js"></script> 
 </head>
 <body>
+    <main>
+    </main>
+    <br>
+<br>
+<br>
+<br>
+<br>
+<a href="spiral.html">Fibonacci Spiral</a>
 </body>
 </html>
